# climatechangemodel

./: .env.example  .gitignore  README.md  render.yaml
.github/workflows/: generate_library.yml  run_worker.yml  tests.yml
engine/: Dockerfile  pyproject.toml
engine/data/eia_hourly/max_mwh_yearly/: CAL_max_vals.csv  CAR_max_vals.csv  CENT_max_vals.csv  FLA_max_vals.csv  MIDA_max_vals.csv  MIDW_max_vals.csv  NE_max_vals.csv  NW_max_vals.csv  NY_max_vals.csv  SE_max_vals.csv  SW_max_vals.csv  TEN_max_vals.csv  TEX_max_vals.csv
engine/data/eia_parquet/: max_mwh_yearly.parquet  meta.json
engine/optimize_engine/: __init__.py  blob.py  constants.py  core.py  mailbox.py  paths.py  schemas.py  service.py
engine/scripts/: convert_eia_to_parquet.py  generate_eia_explorer_data.py  generate_library.py  refresh_eia_data.py  run_worker.py  setup_library_schema.py  setup_runs_schema.py
engine/tests/: test_golden_parity.py
engine/tests/golden/: golden_CAL-CAL.csv  golden_CAL.inbox.csv  golden_CAL_tweaked-CAL.csv  golden_CAL_tweaked.inbox.csv
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AssumptionsBadges.tsx  CO2TrajectoryChart.tsx  CasePicker.tsx  EiaExplorerClient.tsx  EiaTypicalDayChart.tsx  EiaWeeklyChart.tsx  EnergyMixChart.tsx  LibraryPickerClient.tsx  Nav.tsx  NewHereBanner.tsx  RunDownload.tsx  ScenarioPicker.tsx  Term.tsx  YearTable.tsx
web/lib/: db.ts  eiaExplorer.ts  format.ts  library.ts  metrics.ts  regions.ts  runs.ts  scenarioConfig.ts  sources.ts  useForceResizeOnMount.ts  useRunStatus.ts
(+8 files in other folders)
