[project]
name = "optimize-engine"
version = "0.1.0"
description = "Grid decarbonization optimization engine (refactored from cliffgold/Optimize)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.11,<2.0",
    "numba>=0.59,<0.61",
    "numpy-financial>=1.0,<2.0",
    "pydantic>=2.5,<3.0",
    "pyarrow>=15.0,<16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["optimize_engine*"]
